[package]
name = "mev-sentinel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "0.17.0", features = ["abigen"]}
serde_json = "1.0.120"
once_cell = "1.19.0"
itertools = "0.13.0"
anyhow = "1.0.86"


# cached provider
thiserror = "1.0.61"
async-trait = "0.1.81"
serde = "1.0.204"


# postgres connection
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
gumdrop = "0.8.1"
rust_decimal = "1.35.0"
futures = "0.3.30"
hex = "0.4.3"
log = "0.4.22"
pretty_env_logger = "0.5.0"



